--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>DA-MEOW | 大咪成长史</title>
+  <title>MEOW's GALLERY | 大咪成长史</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
